# solana-name-service

./: package-lock.json  package.json
src/: Cargo.toml
src/account-name-service/: Cargo.toml
src/account-name-service/src/: lib.rs
src/client/: airdrop.ts  createAndRegisterAccount.ts  createAndRegisterToken.ts  createPointer.ts  createToken.ts  deploy.ts  deploy_account_name_service.ts  deploy_flow.ts  deploy_pointer.ts  initializePointer.ts  nodeConnection.ts  playground.ts  setPointer.ts  storeConfig.ts  tempCodeRunnerFile.ts
src/client/util/: send-and-confirm-transaction.ts
src/proxy-pointer/: Cargo.toml
src/proxy-pointer/src/: lib.rs
src/token-name-service/: Cargo.toml
src/token-name-service/src/: lib.rs
store mainnet/: account-name-service.json  counter.json  proxy-pointer.json  token-name-service.json
store_devnet/: account-name-service.json  counter.json  proxy-pointer.json  token-name-service.json
store_testnet/: account-name-service.json  counter.json  proxy-pointer.json  token-name-service.json
